evcc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evcc
spec:
  selector:
    app: evcc
  ports:
    - port: 7070
      targetPort: 7070
      name: http
