evcc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evcc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: evcc.aukia.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: oauth2-proxy-evcc
                port:
                  number: 4180
  tls:
    - hosts:
        - evcc.aukia.com
      secretName: evcc-tls
