evcc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: evcc
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: oauth2-proxy-evcc
    weight: 100
  port:
    targetPort: http
